# boombox

./: ,  .formatter.exs  .gitignore  README.md  build_binary.sh  examples.livemd  mix.exs  run.exs  script.exs  test_cli
.circleci/: config.yml
.github/workflows/: ci.yml  fetch_changes.yml  release.yml
boombox_examples_data/: talk_to_llm.html  webrtc_from_browser.html  webrtc_to_browser.html  whip.html
config/: config.exs
examples/: ai.livemd  basic.livemd  stream_processing.livemd  streaming.livemd
examples/data/: hls.html
examples_assets/hls/: stream.html
lib/: boombox.ex  membrane_template.ex
lib/boombox/: aac.ex  application.ex  bin.ex  (+25 more)
python/: .gitignore  .readthedocs.yaml  README.md  anonymise_demo.py  pyproject.toml  setup.py
python/docs/: boombox.rst  boombox_endpoints.rst  conf.py  index.rst
python/examples/: README.md  anonymization_demo.py  requirements.txt
python/examples/anonymize_stream/: README.md  anonymization_demo.py  requirements.txt
python/examples/assets/: hls.html  receiver.html  sender.html  style.css
python/examples/generate_hls_livestream/: README.md  main.py
python/examples/invert_mp4_colors/: README.md  main.py
python/examples_data/: style.css
python/src/boombox/: __init__.py  boombox.py  endpoints.py  guard.c
python/src/boombox/_vendor/pyrlang/: __init__.py  net_kernel.py  node.py  notebook.py  process.py  rex.py  util.py
python/src/boombox/_vendor/pyrlang/dist_proto/: __init__.py  base_dist_protocol.py  client.py  distribution.py  epmd_client.py  server.py
python/src/boombox/_vendor/pyrlang_term-1.5a0.dist-info/: METADATA  RECORD  WHEEL  direct_url.json
python/src/boombox/_vendor/term/: __init__.py  atom.py  bitstring.py  codec.py  fun.py  list.py  pid.py  py_codec_impl.py  reference.py  util.py
python/src/boombox/_vendor/term2/: __init__.py  atom.py  basetypes.py  bitstring.py  codec.py  fun.py  list.py  pid.py  py_codec_impl.py  reference.py
test/: .gitignore  boombox_bin_test.exs  boombox_browser_test.exs  boombox_file_endpoints_test.exs  boombox_internal_bin_rtsp_test.exs  boombox_storage_endpoints_test.exs  boombox_test.exs  boombox_utils_cli_test.exs  browser_test.exs  generate_parametric_tests.exs  test_helper.exs
(+104 files in other folders)
