[project]
name = "boombox"
version = "0.1.0"
description = "Boombox SDK for Python"
readme = "README.md"
authors = [
    { name = "Membrane Team" }
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.11"
dependencies = [
    "pyrlang-term @ git+https://github.com/Pyrlang/Term@bf762693bff43d7ccad15c854aa075f849bd0dbc",
    "pyrlang @ git+https://github.com/Pyrlang/Pyrlang@d8b12828f8c9d117af45819f97702b82a43fdb0d",
    "numpy >= 2.2.5",
    "typing-extensions >= 4.13.2, < 5"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["**"]

#[tool.distutils.bdist_wheel]
#plat-name = "macosx_14_4_arm64"

