[project]
name = "boomboxlib"
version = "0.2.8"
description = "Boombox SDK for Python"
readme = "README.md"
authors = [
    { name = "Membrane Team" }
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.11"
dependencies = [
    "numpy >= 2.2.5",
    "typing-extensions >= 4.13.2, < 5",
    "tqdm >= 4.67.1, < 5",
    "platformdirs >= 4.4, < 5"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["**"]
